tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__IneedadrinkAndmo-AAAAAAAAAAAAAAAAAAALnw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2975,
  "prerequisites": [
    849,
    1322,
    751
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The most efficient way to process Ruby Ore. Better than electrolysis.\n\n[note]Check out NEI for similar processes based on Sapphire and Green Sapphire.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lI need a drink. And more Chrome.",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    849,
    1322,
    751
  ],
  "rewards": [],
  "tasks": []
}
