tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__IronIIIChloride-AAAAAAAAAAAAAAAAAAAD_A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1020,
  "prerequisites": [
    750
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Iron (III) Chloride can be made by first making hydrochloric acid out of hydrogen and chlorine. Then combine this with some iron dust to make Iron(III) Chloride.\nYou can etch your board with it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lIron (III) Chloride",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    750
  ],
  "rewards": [],
  "tasks": []
}
