tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__LargeAluminiumFl-AAAAAAAAAAAAAAAAAAAF8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1520,
  "prerequisites": [
    1598
  ],
  "properties": {
    "auto_claim": false,
    "desc": "512 buckets in a stack not cutting it? Aluminium cells can hold 32 buckets per cell, and stack to 64. 2,048 buckets in a single stack? That's half a supertank!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lLarge Aluminium Fluid Cells",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1598
  ],
  "rewards": [],
  "tasks": []
}
