tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__MVBending-AAAAAAAAAAAAAAAAAAAEOQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1081,
  "prerequisites": [
    896
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This Plate Bending Machine allows you to directly make double, triple or more compressed plates, which might be useful for your first rocket in HV Tier.\n\nIt also allows you to make dense plates at all.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lMV Bending",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    896
  ],
  "rewards": [],
  "tasks": []
}
