tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier2MV-AAAAAAAAAAAAAAAAAAAABA==__MVEnergyHatch-AAAAAAAAAAAAAAAAAAAC8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 754,
  "prerequisites": [
    1084,
    1868,
    77,
    1598
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Some materials like stainless steel require 480 EU/t. Your LV hatches are not good enough. Craft a minimum of two MV hatches to upgrade your electric blast furnace to HV.\n\n[note]BTW, if a Multiblock's recipe is 1EU over 1A for that tier, you must use a second energy hatch for it to use 2A or more.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lMV Energy Hatch",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1084,
    1868,
    77,
    1598
  ],
  "rewards": [],
  "tasks": []
}
